    - added GtkAspectFrame class definition. (Andrei)
    - optimized internal resource handling, this should save on memory. (Andrei)
    - fixed a bug that would corrupt object type when setting cascaded property.
      (Andrei)
    - added a few more properties to GtkCTree and GtkCList. (Andrei)
    - implemented GtkMenu::popup(). (Andrei)
    - fixed GtkCTree::insert_row() for good, added GtkCTree methods
      node_set_row_data() and node_get_row_data(). (Andrei)
    - added helper GtkCListRow class. (Andrei)
    - separated GdkWindow, GdkBitmap, GdkPixmap implementations to allow for
      more flexibility and clarity. (Andrei)
    - implemented GtkObject methods get_data(), set_data, connect_after(),
      connect_object_after(). (Andrei)
    - added several more widget examples to gtk.php. (Andrei)
    - added ability to get and set color for GtkColorSelection. (Andrei)

Version 0.0.3 "slow glass": 20-Mar-2001
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    - added libglade support. (Andrei)
    - fixed cascading property access in objects. (Andrei)
    - added GtkRadioMenuItem, GtkRadioButton constructors. (Andrei)
    - added Gdk::pixmap_create_from_xpm_d(). (Andrei)
    - added GtkCList::prepend(), GtkClist::insert(). (Andrei)
    - added GtkCList example to gtk.php. (Andrei)
    - made Gdk::input_add() work with file resources. (Andrei)
    - fixed GDK locale support. (Alex Bokovoy)
    - reworked the generator to make it more generalized. (Andrei)
    - re-engineered the build system a bit to accomodate the need to build
      additional modules. (Andrei)
    - added helper GtkBoxChild, GtkFixedChild classes. (Andrei)
    - added some properties for GtkWidget, GtkBin, GtkMisc, GtkArrow, GtkBox,
      GtkCalendar, GtkCTree, GtkList, and GtkCList classes. (Andrei)


Version 0.0.2 "primordial nucleosynthesis": 7-Mar-2001
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    - added 'child' property to GtkBin and its descendants. (Andrei)